--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clipboard": "^2.0.11",
     "flowbite": "^2.4.1",
     "preline": "^2.4.1",
+    		"@astrojs/vercel": "7.7.2",
+
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   },
